Footer section updated

--- a/Project-04 (Portfolio Caleb Nyong)/assets/main.css
+++ b/Project-04 (Portfolio Caleb Nyong)/assets/main.css
@@ -347,4 +347,5 @@ footer .container .menu h3 {
 }
 footer .container .menu p {
   opacity: 0.31;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
