--- a/Project-06 (Real Estate Business Website)/assets/scss/main.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/main.scss
@@ -11,11 +11,13 @@
 //Components styles
 @import "components/buttons";
 @import "components/cards";
+@import "components/content";
 
 //Layout styles
 @import "layout/header";
 @import "layout/hero";
 @import "layout/service-card";
+@import "layout/properties";
 
 //Pages styles
 @import "pages/home";
