--- a/Project-06 (Real Estate Business Website)/assets/scss/main.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import "layout/hero";
 @import "layout/service-card";
 @import "layout/properties";
+@import "layout/testimonials";
 
 //Pages styles
 @import "pages/home";
