--- a/Project-06 (Real Estate Business Website)/assets/scss/components/_cards.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/components/_cards.scss
@@ -127,7 +127,11 @@
                     }
                 }
             }
-        }   
+        }
+        
+        .faq-card{
+            gap: 30px;
+        }
     }
 
     .slider-btns{
