--- a/Project-06 (Real Estate Business Website)/assets/scss/main.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/main.scss
@@ -19,6 +19,7 @@
 @import "layout/service-card";
 @import "layout/properties";
 @import "layout/testimonials";
+@import "layout/faq";
 
 //Pages styles
 @import "pages/home";
