--- a/Project-06 (Real Estate Business Website)/assets/scss/main.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import "layout/properties";
 @import "layout/testimonials";
 @import "layout/faq";
+@import "layout/cta";
 
 //Pages styles
 @import "pages/home";
