--- a/Project-06 (Real Estate Business Website)/assets/css/main.css
+++ b/Project-06 (Real Estate Business Website)/assets/css/main.css
@@ -463,6 +463,28 @@ pre, code {
   width: 1200px;
 }
 
+/* Width and height of the scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1a1a1a;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #703BF7;
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 header {
   width: 100%;
   height: 10vh;
