--- a/Project-06 (Real Estate Business Website)/assets/scss/main.scss
+++ b/Project-06 (Real Estate Business Website)/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/content";
+@import "components/scrollbar";
 
 //Layout styles
 @import "layout/header";
